--- a/templates/post.html
+++ b/templates/post.html
@@ -1,9 +1,11 @@
 
 <div class="container">
+
   <div id="content">
     <div class="page header">
       <h1>$title$</h1>
     </div>
+    $if(isPost)$
     <div class="info">
       $if(subtitle)$ <div class="subtitle"><p>$subtitle$</p></div> $endif$
       $if(date)$ 
@@ -15,7 +17,7 @@
       $if(parent)$ <p>Parent: $parent$</p> $endif$
 	  $if(children)$ <p>Children: $children$</p> $endif$
     </div>
-    
+    $endif$
   </div>
   <!--/div-->
 
