added LOTS of articles

--- a/category/Views/index.html
+++ b/category/Views/index.html
@@ -112,11 +112,19 @@
         </li>
     
         <li>
+            <a href="../../The%20right%20movement%20vs%20the%20material%20story.html">The right movement vs the material story</a> (2017-08-13)
+        </li>
+    
+        <li>
             <a href="../../The%20Buddha%20and%20the%20prince.html">The Buddha and the prince</a> (2017-08-13)
         </li>
     
         <li>
             <a href="../../Staring%20at%20the%20ceiling.html">Staring at the ceiling</a> (2017-08-13)
+        </li>
+    
+        <li>
+            <a href="../../Signs.html">Signs</a> (2017-08-13)
         </li>
     
         <li>
@@ -128,7 +136,23 @@
         </li>
     
         <li>
+            <a href="../../Open%20arms.html">Open arms</a> (2017-08-13)
+        </li>
+    
+        <li>
+            <a href="../../Love%20is%20friendship%2C%20just%20deeper.html">Love is friendship, just deeper</a> (2017-08-13)
+        </li>
+    
+        <li>
             <a href="../../Is%20A-Fu%20Stupid.html">Is A-Fu Stupid</a> (2017-08-13)
+        </li>
+    
+        <li>
+            <a href="../../Introvert-Extravert%20exchange.html">Introvert-Extravert exchange</a> (2017-08-13)
+        </li>
+    
+        <li>
+            <a href="../../Individualism%20vs%20mechanism.html">Individualism vs mechanism</a> (2017-08-13)
         </li>
     
         <li>
@@ -136,11 +160,23 @@
         </li>
     
         <li>
+            <a href="../../Fear%20of%20power.html">Fear of power</a> (2017-08-13)
+        </li>
+    
+        <li>
             <a href="../../Duck%20parable.html">Duck parable</a> (2017-08-13)
         </li>
     
         <li>
+            <a href="../../Cyclicity%20vs%20the%20straight%20line.html">Cyclicity vs the straight line</a> (2017-08-13)
+        </li>
+    
+        <li>
             <a href="../../Conversation%20on%20curiosity.html">Conversation on curiosity</a> (2017-08-13)
+        </li>
+    
+        <li>
+            <a href="../../Basking%20vs%20savoring.html">Basking vs savoring</a> (2017-08-13)
         </li>
     
         <li>
@@ -188,10 +224,6 @@
         </li>
     
         <li>
-            <a href="../../On%20journaling.html">On journaling</a> (2017-08-07)
-        </li>
-    
-        <li>
             <a href="../../Love.html">Love</a> (2017-08-07)
         </li>
     
@@ -229,6 +261,22 @@
     
         <li>
             <a href="../../Activation%20energy%20and%20the%20unit%20of%20discourse.html">Activation energy and the unit of discourse</a> (2017-08-07)
+        </li>
+    
+        <li>
+            <a href="../../Shadow.html">Shadow</a> (2016-11-05)
+        </li>
+    
+        <li>
+            <a href="../../What%20is%20the%20root%20of%20your%20feeling.html">What is the root of your feeling</a> (2016-04-04)
+        </li>
+    
+        <li>
+            <a href="../../Nice%20guy.html">Nice guy</a> (2016-04-04)
+        </li>
+    
+        <li>
+            <a href="../../Be%20yourself.html">Be yourself</a> (2016-04-04)
         </li>
     
 </ul>
