--- a/category/Views/index.html
+++ b/category/Views/index.html
@@ -108,11 +108,19 @@
         </li>
     
         <li>
+            <a href="../../Understanding%20between%20sexual%20cultures.html">Understanding between sexual cultures</a> (2017-08-13)
+        </li>
+    
+        <li>
             <a href="../../Two%20kinds%20of%20laughter.html">Two kinds of laughter</a> (2017-08-13)
         </li>
     
         <li>
             <a href="../../The%20right%20movement%20vs%20the%20material%20story.html">The right movement vs the material story</a> (2017-08-13)
+        </li>
+    
+        <li>
+            <a href="../../The%20beauty%20of%20ideas%20vs%20the%20beauty%20of%20writing.html">The beauty of ideas vs the beauty of writing</a> (2017-08-13)
         </li>
     
         <li>
