--- a/category/Views/index.html
+++ b/category/Views/index.html
@@ -104,6 +104,10 @@
     <ul>
     
         <li>
+            <a href="../../Surrounded%20by%20music.html">Surrounded by music</a> (2017-08-18)
+        </li>
+    
+        <li>
             <a href="../../X%20vs%20Myopic%20X.html">X vs Myopic X</a> (2017-08-13)
         </li>
     
@@ -233,6 +237,10 @@
     
         <li>
             <a href="../../Love.html">Love</a> (2017-08-07)
+        </li>
+    
+        <li>
+            <a href="../../Listening%20to%20music.html">Listening to music</a> (2017-08-07)
         </li>
     
         <li>
