--- a/css/blog.css
+++ b/css/blog.css
@@ -136,3 +136,11 @@ h1, .h1{
     /*color:#999;*/
     text-align:center}
 
+table {
+    width: 100%;
+}
+
+th, td {
+    padding: 5px;
+    text-align: left;
+}
